# Pathfinder

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Game/: CMakeLists.txt  Scene.cpp  Scene.hpp  SpriteRenderer.hpp  main.cpp
Game/Component/: Component.hpp  Sprite.hpp
Game/Composite/: Composite.h
Game/Entity/: SquareTile.hpp  Tile.cpp  Tile.hpp
Game/Input/: Button.cpp  Button.h  InputManager.cpp  InputManager.h
Game/InputManager/: Button.h  ButtonManager.cpp  ButtonManager.h  ContentType.h  IState.h  InputManager.cpp  InputManager.h  InterfaceContentNode.cpp  InterfaceContentNode.h  InterfaceContentTree.h  TextField.cpp  TextField.h
Game/State/: DefaultState.cpp  DefaultState.h  EndState.cpp  EndState.h  GroundState.cpp  GroundState.h  IState.h  PortalState.cpp  PortalState.h  RunState.cpp  RunState.h  StartState.cpp  StartState.h  StateMachine.cpp  StateMachine.h  WallState.cpp  WallState.h
Game/UI/: Button.h
PathfindingSystem/: CMakeLists.txt  PathfindingSystem.hpp
PathfindingSystem/Astar/: Grid.h  Node.h  PortalNode.h  astarsearch.h
scripts/: linux-build-debug.sh  linux-build-release.sh  linux-install.sh  osx-build-debug.sh  osx-build-release.sh  osx-install.sh  windows-build-debug.bat  windows-build-release.bat  windows-install.bat
